Fix for page getting cut off when printing with sideNav open

--- a/Custom Dashboards/web/mdAdmin/styles/main.css
+++ b/Custom Dashboards/web/mdAdmin/styles/main.css
@@ -247,6 +247,13 @@ md-sidenav.site-sidenav.md-closed {
   visibility: hidden;
 }
 
+/* Override visibility of main container that is getting cut off when printing with sideNav open */
+@media print {
+    div.main-application > div {
+        overflow: visible !important;
+    }
+}
+
 /***************
  * TYPE DEFAULTS
  ***************/
